# copyandpaste

./: Cargo.toml  README.md
.github/workflows/: ci.yml
db/: bashoneliner.yaml  default.yaml
src/: config.rs  item.rs  main.rs
